--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -33,10 +33,10 @@
             <ul>
               <li><a href="https://github.com/ecker-lab/sensorium_2023" class="button"><strong>Starting Kit</strong></a></li>
               <li><a href="https://codalab.sensorium-competition.net" class="button"><strong>CodaLab</strong></a></li>
-              <!--<li><a href="https://www.deeplake.ai" class="button"><strong>Data</strong></a></li> -->
               <!-- <li><a href="{{ "/redirect/" | relative_url }}" class="button"><strong>CodaLab</strong></a></li> -->
               <li><a href="https://arxiv.org/abs/2305.19654" class="button"><strong>Whitepaper</strong></a></li>
-              <li><a href="{{ "/redirect/" | relative_url }}" class="button"><strong>Data</strong></a></li>
+              <!-- <li><a href="{{ "/redirect/" | relative_url }}" class="button"><strong>Data</strong></a></li> -->
+              <li><a href="https://github.com/ecker-lab/sensorium_2023/blob/main/notebooks/load_data_demo.ipynb" class="button"><strong>Data</strong></a></li>
             </ul>
           </div>
       </div><!-- end banner -->
