announcement deadline extension

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -44,6 +44,12 @@
     <div class="wrapper">
       <nav>
         <ul></ul>
+
+    <div style="background-color: #ffcc00 ; padding: 10px; border: 1px solid black; font-size: 1rem; text-align: left;"> 
+      Good news! <br/>
+      We extended the submission deadline to Oct. 15!<br/>
+      Check the updated <a href="{{ "#timeline" | relative_url }}">timeline</a>.
+      </div>
       </nav>
       <section>
         {{ content }}
